--- a/views/people/new.ejs
+++ b/views/people/new.ejs
@@ -1,7 +1,20 @@
 <!doctype html>
 <html>
   <head>
+  	<link href="/css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+  	<div class = "whitebox">
+	  	<h3>Add a new person</h3>
+	  	<form action="/people" method="post">  
+	    	<input type="text" name = "firstName" placeholder="First Name"> 
+	    	<br>
+	    	<input type="text" name = "lastName" placeholder="Last Name" > 
+	    	<br>
+	    	<input type="submit" value="Add Person">
+	  	</form>
+	  	<br><br>
+	  	<a href="/">Back Home</a>
+	  </div>
   </body>
 </html>
